--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
     list-style: none;
   }
   .header {
-    background-image: url(/images/banner-bg.jpg);
+    background-image: url(../images/banner-bg.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -154,18 +154,18 @@
     margin-left: 4px;
   }
   .one {
-    background-image: url(/images/trend1.jpg);
+    background-image: url(../images/trend1.jpg);
   }
   .two {
-    background-image: url(/images/trend2.jpg);
+    background-image: url(../images/trend2.jpg);
   }
 
   .three {
-    background-image: url(/images/trend3.jpg);
+    background-image: url(../images/trend3.jpg);
   }
 
   .four {
-    background-image: url(/images/trend4.jpg);
+    background-image: url(../images/trend4.jpg);
   }
   .trend-item {
     border: 3px solid #79714b;
@@ -289,7 +289,7 @@
     width: 48px;
     height: 48px;
     background-color: #b59f5b;
-    background-image: url(/svg/search.svg);
+    background-image: url(../svg/search.svg);
     background-repeat: no-repeat;
     background-size: 20px 20px;
     background-position: center;
@@ -411,13 +411,13 @@
     margin-right: 30px;
   }
   .icon-img-dribbble {
-    background-image: url(/svg/001-dribbble.svg);
+    background-image: url(../svg/001-dribbble.svg);
   }
   .icon-img-pinterest {
-    background-image: url(/svg/002-pinterest.svg);
+    background-image: url(../svg/002-pinterest.svg);
   }
   .icon-img-tumblr {
-    background-image: url(/svg/003-tumblr.svg);
+    background-image: url(../svg/003-tumblr.svg);
   }
   
   .copyrights {
@@ -435,7 +435,7 @@
   
   @media(min-width:641px) and (max-width:1199px) {
     .header {
-      background-image: url(/images/banner-bg-tablet.jpg);
+      background-image: url(../images/banner-bg-tablet.jpg);
     }
     .burger {
       display: flex;
@@ -507,7 +507,7 @@
   @media(max-width: 640px) { 
     
     .header {
-      background-image: url(/images/banner-mobile.jpg);
+      background-image: url(../images/banner-mobile.jpg);
     }
     .burger {
       display: flex;
